--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
 }
 
 html {
-  font-family: 'Exo', sans-serif;
+  font-family: "Exo", sans-serif;
   font-size: 18px;
 }
 
 body {
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
 
 .container {
@@ -26,7 +26,7 @@ header {
 }
 
 h1 {
-  color: #F4A423;
+  color: #f4a423;
 
   font-weight: 900;
   font-size: 3rem;
@@ -49,8 +49,8 @@ nav a {
 }
 
 nav a:hover {
-  color: #F4A423;
-  border-color: #F4A423;
+  color: #f4a423;
+  border-color: #f4a423;
 }
 
 .plans {
@@ -78,8 +78,8 @@ p {
 .price {
   margin-bottom: 1rem;
 
-  color: #F4A423;
-  
+  color: #f4a423;
+
   font-size: 1.6rem;
   font-weight: bold;
 }
@@ -89,7 +89,7 @@ button {
 
   width: 100%;
 
-  background-color: #D33F49;
+  background-color: #d33f49;
   color: white;
   border: none;
   border-radius: 4px;
@@ -97,7 +97,56 @@ button {
   font-size: 1rem;
   text-align: center;
   line-height: 2rem;
-  
+
   outline: none;
   cursor: pointer;
+}
+
+@media (min-width: 768px) and (max-width: 1200px) {
+  header {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  nav {
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .plans {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
+  }
+
+  .card {
+    width: 45%;
+    flex-grow: 1;
+  }
+}
+
+@media (min-width: 1200px) {
+  header {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    justify-content: space-between;
+  }
+
+  nav {
+    flex-direction: row;
+    gap: 2rem;
+  }
+
+  .plans {
+    display: flex;
+    gap: 1.5rem;
+  }
+
+  .card {
+    width: 22%;
+    flex-grow: 1;
+  }
 }
