--- a/style.css
+++ b/style.css
@@ -150,3 +150,33 @@ button {
     flex-grow: 1;
   }
 }
+
+@media (max-width: 320px) {
+  .title {
+    font-size: 12px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .title {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 480px) and (max-width: 800px) {
+  .title {
+    font-size: 20px;
+  }
+}
+
+@media (min-width: 800px) and (max-width: 1280px) {
+  .title {
+    font-size: 24px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .title {
+    font-size: 32px;
+  }
+}
